02_setup_update_apis/k8s_objects/country102-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    label: country
  name: country
