02_setup_update_apis/k8s_objects/air103-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: air103
  name: air103
  namespace: air
spec:
  replicas: 2
  selector:
    matchLabels:
      run: air103
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: air103
    spec:
      containers:
      - image: ztoth123/aircountries:air103
        name: air103
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: regcred
