02_setup_update_apis/k8s_objects/air103-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: air103
  name: air103-service
  namespace: air
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: air103
  sessionAffinity: None
  type: ClusterIP
