02_setup_update_apis/k8s_objects/air103_112-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: air-ingress
  namespace: air
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: air-country.lunatest.nl
    http:
      paths:
      - path: /airports
        backend:
          serviceName: air103-service
          servicePort: 8080
      - path: /airports/
        backend:
          serviceName: air103-service
          servicePort: 8080
