02_setup_update_apis/k8s_objects/country102-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: countries-ingress
  namespace: country
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: air-country.lunatest.nl
    http:
      paths:
      - path: /countries
        backend:
          serviceName: country102-service
          servicePort: 8080
      - path: /countries/
        backend:
          serviceName: country102-service
          servicePort: 8080
